--- a/app/views/promotions/show.html.erb
+++ b/app/views/promotions/show.html.erb
@@ -13,7 +13,9 @@
     <dd><%= @promotion.coupon_quantity %></dd>
 </dl>
 
-<div><%= link_to 'Editar Promoção', edit_promotion_path(@promotion) %></div>
+<div><%= link_to 'Editar Promoção', edit_promotion_path(@promotion) %>
+| <%= link_to 'Excluir Promoção', promotion_path(@promotion), method: :delete,
+                                            data: { confirm: "Deseja deletar a promoção: #{@promotion.name}?"} %></div>
 
 <% if @promotion.coupons.empty? %>
     <%= link_to 'Gerar cupons', generate_coupons_promotion_path(@promotion), method: :post%>
