WIP can edit and delete Product Category, b, but others tests(promotion) are failing

--- a/app/views/product_categories/show.html.erb
+++ b/app/views/product_categories/show.html.erb
@@ -1,3 +1,5 @@
+<%= flash[:notice] %>
+
 <dl>
     <dt>Nome</dt>
     <dd> <%= @product_category.name %></dd>
@@ -5,5 +7,9 @@
     <dt>Código</dt>
     <dd><%= @product_category.code %></dd>
 </dl>
+
+<div><%= link_to 'Editar Categoria', edit_product_category_path(@product_category) %>
+| <%= link_to 'Excluir Categoria', product_category_path(@product_category), method: :delete,
+                                            data: { confirm: "Deseja deletar a Categoria: #{@product_category.name}?"} %></div>
 
 <%= link_to 'Voltar', product_categories_path %>
