WIP adding authentication, but several test is failing

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,8 @@
       <% if user_signed_in? %>
         <%= current_user.email %>
         <%= link_to 'Sair' '#' %>
-        <%= link_to 'Promoções, promotion_path' %>
+        <%= link_to 'Promoções', promotions_path %>
+        <%= link_to 'Categorias de Produtos',  product_categories_path %>
       <% else %>
         <%= link_to 'Cadastrar', new_user_registration_path %>
         <%= link_to 'Entrar', new_user_session_path %>
