--- a/app/views/product_categories/index.html.erb
+++ b/app/views/product_categories/index.html.erb
@@ -1,3 +1,5 @@
+<% #TODO: add I18n and partial form %>
+
 <% if @product_categories.empty? %>
     <h3>Nenhuma Categoria de Produto cadastrada</h3>
 <% end %>
