--- a/app/views/promotions/index.html.erb
+++ b/app/views/promotions/index.html.erb
@@ -5,14 +5,13 @@
 <%= link_to 'Registrar uma promoção', new_promotion_path %>
 
 <% @promotions.each do |promotion|  %>
-<h3><%= link_to promotion.name, promotion %></h3>
-<dl>
-    <dt>Descrição</dt>
+  <h3><%= link_to promotion.name, promotion %></h3>
+  <dl>
+    <dt><%= Promotion.human_attribute_name(:description) %></dt>
     <dd><%= promotion.description %></dd>
-    <dt>Desconto <small>em porcentagem</small></dt>
+    <dt><%= Promotion.human_attribute_name(:discount_rate) %> <small>em porcentagem</small></dt>
     <dd><%= number_to_percentage promotion.discount_rate, separator: ',', precision: 2 %></dd>
-
-</dl>
+  </dl>
 <% end %>
 
 <div><%= link_to 'Voltar', root_path %></div>
