--- a/app/views/product_categories/edit.html.erb
+++ b/app/views/product_categories/edit.html.erb
@@ -9,16 +9,4 @@
     </ul>
 <% end %>
 
-<%= form_with model: @product_category do |f| %>
-    <div>
-        <%= f.label :name, 'Nome' %>
-        <%= f.text_field :name %>
-    </div>
-    <div>
-        <%= f.label :code, 'Código' %>
-        <%= f.text_field :code %>
-    </div>
-    <div>
-        <%= f.submit 'Enviar' %>
-    </div>
-<% end %>
+<%= render "form" %>
