--- a/app/views/promotions/new.html.erb
+++ b/app/views/promotions/new.html.erb
@@ -9,32 +9,4 @@
     </ul>
 <% end %>
 
-<%= form_with model: @promotion do |f| %>
-    <div>
-        <%= f.label :name %>
-        <%= f.text_field :name %>
-    </div>
-    <div>
-        <%= f.label :description %>
-        <%= f.text_area :description %>
-    </div>
-    <div>
-        <%= f.label :code %>
-        <%= f.text_field :code %>
-    </div>
-    <div>
-        <%= f.label :discount_rate %>
-        <%= f.number_field :discount_rate, in: 0..100, step: 0.1 %>
-    </div>
-    <div>
-        <%= f.label :coupon_quantity %>
-        <%= f.number_field :coupon_quantity, min: 1 %>
-    </div>
-    <div>
-        <%= f.label :expiration_date %>
-        <%= f.text_field :expiration_date %>
-    </div>
-    <div>
-        <%= f.submit %>
-    </div>
-<% end %>
+<%= render "form" %>
