--- a/app/views/promotions/index.html.erb
+++ b/app/views/promotions/index.html.erb
@@ -4,6 +4,12 @@
 
 <%= link_to 'Registrar uma promoção', new_promotion_path %>
 
+<%= form_with url: search_promotions_path, method: :get do |f| %>
+<%= f.label :query, 'Busca' %>
+<%= f.text_field :query %>
+<%= f.submit 'Buscar' %>
+<% end %>
+
 <% @promotions.each do |promotion|  %>
   <h3><%= link_to promotion.name, promotion %></h3>
   <dl>
