--- a/app/views/promotions/index.html.erb
+++ b/app/views/promotions/index.html.erb
@@ -10,14 +10,6 @@
 <%= f.submit 'Buscar' %>
 <% end %>
 
-<% @promotions.each do |promotion|  %>
-  <h3><%= link_to promotion.name, promotion %></h3>
-  <dl>
-    <dt><%= Promotion.human_attribute_name(:description) %></dt>
-    <dd><%= promotion.description %></dd>
-    <dt><%= Promotion.human_attribute_name(:discount_rate) %> <small>em porcentagem</small></dt>
-    <dd><%= number_to_percentage promotion.discount_rate, precision: 2 %></dd>
-  </dl>
-<% end %>
+<%= render @promotions %>
 
 <div><%= link_to 'Voltar', root_path %></div>
