--- a/app/views/promotions/show.html.erb
+++ b/app/views/promotions/show.html.erb
@@ -17,8 +17,14 @@
                           method: :delete,
                           data: { confirm: "Deseja deletar a promoção: #{@promotion.name}?"} %></div>
 
-<% if @promotion.coupons.empty? %>
-    <%= link_to t('.generate_coupons'), generate_coupons_promotion_path(@promotion), method: :post%>
+<% if @promotion.approved? %>
+  <p>Aprovada por: <%= @promotion.approver.email %></p>
+  <% if @promotion.coupons.empty? %>
+    <%= link_to t('.generate_coupons'), generate_coupons_promotion_path(@promotion), method: :post  %>
+  <% end %>
+<% elsif @promotion.can_approve?(current_user) %>
+  <%= link_to 'Aprovar', approve_promotion_path(@promotion), method: :post, 
+  data: {confirm: 'Tem certeza? Essa operação não pode ser desfeita'} %>
 <% end %>
 
 <div><%= link_to t('.back'), promotions_path %></div>
